--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Bostorek
+              Edwerse
             </span>
           </a>
 
@@ -55,9 +55,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="categories.html">Categories</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="blog.html"> Blog </a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
@@ -82,28 +82,43 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/about-img.png" alt="">
+            <img src="images/Edwerse_Logo_3d_work.pdf-removebg-preview.png" alt="">
           </div>
         </div>
         <div class="col-md-6">
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                About Our Bookstore
+                About Our Consultant
               </h2>
             </div>
-            <p>
-              At cumque tenetur iste molestiae, vel eum reiciendis assumenda! Numquam, repudiandae. Consequuntur obcaecati recusandae aliquam, amet doloribus eius dolores officiis cumque? Quibusdam praesentium pariatur sapiente mollitia, amet hic iusto voluptas! Iusto quo earum vitae excepturi, ipsam aliquid deleniti assumenda culpa deserunt.
-            </p>
-            <a href="">
-              Read More
-            </a>
+            <div>
+              <h3>Our Vision</h3>
+              <p>
+                To smooth the progress of matching strong prospective students with the most appropriate higher
+                education programs in India. To provide up-to-date information to Student society by making them aware
+                of the various aspects of educational institutes and courses in India.
+              </p>
+            </div>
+            <div>
+              <h3>Our Mission</h3>
+              <p>
+                To be the premier provider in extending and enhancing students livelihood by providing high value
+                added guidance in motivating them to invest hard work, time and financial resources in shaping of
+                their career.
+              </p>
+            </div>
+            <!-- <p>
+              At cumque tenetur iste molestiae, vel eum reiciendis assumenda! Numquam, repudiandae. Consequuntur
+              obcaecati recusandae aliquam, amet doloribus eius dolores officiis cumque? Quibusdam praesentium
+              pariatur sapiente mollitia, amet hic iusto voluptas! Iusto quo earum vitae excepturi, ipsam aliquid
+              deleniti assumenda culpa deserunt.
+            </p> -->
           </div>
         </div>
       </div>
     </div>
   </section>
-
   <!-- end about section -->
 
   <!-- info section -->
@@ -111,13 +126,14 @@
   <section class="info_section layout_padding2">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-lg-3 info-col">
+        <div class="col-md-6 col-lg-4 info-col">
           <div class="info_detail">
             <h4>
               About Us
             </h4>
             <p>
-              Vitae aut explicabo fugit facere alias distinctio, exem commodi mollitia minusem dignissimos atque asperiores incidunt vel voluptate iste
+              Edwerse International Educational Services is a registered consultancy service. We help the candidates to remit the entire fee directly to the colleges. There will not be any direct
+              money transactions between Edwerse Consultant services and candidates.
             </p>
             <div class="info_social">
               <a href="">
@@ -135,7 +151,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 info-col">
+        <div class="col-md-6 col-lg-4 info-col">
           <div class="info_contact">
             <h4>
               Address
@@ -144,25 +160,25 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  Valancheri & Edappal
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +91 96562 22637
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  edwerseconsultancy@gmail.com
                 </span>
               </a>
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 info-col">
+        <div class="col-md-6 col-lg-4 info-col">
           <div class="info_contact">
             <h4>
               Newsletter
@@ -175,13 +191,14 @@
             </form>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 info-col">
+        <!-- <div class="col-md-6 col-lg-3 slider_section detail-box">
           <div class="map_container">
             <div class="map">
-              <div id="googleMap"></div>
+              <a href="">Find Us On Google Map</a>
+               <div id="googleMap"></div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
