--- a/categories.html
+++ b/categories.html
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Bostorek
+              Edwerse
             </span>
           </a>
 
@@ -83,10 +83,10 @@
       <div class="container ">
         <div class="heading_container heading_center">
           <h2>
-            Books Categories
+            Assistance & Guidance
           </h2>
           <p>
-            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+            Find your Apptitude, Course & College
           </p>
         </div>
         <div class="row">
@@ -97,12 +97,11 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Textbooks
+                  Education
                 </h5>
                 <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using
+                  Guiding the students by understanding. With Course descriptions includes Guide & select the best on
+                  thousands of universities according to students profile
                 </p>
               </div>
             </div>
@@ -114,12 +113,10 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Science
+                  Placements
                 </h5>
                 <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using
+                  Assists students who have gained admission through us for placement
                 </p>
               </div>
             </div>
@@ -131,12 +128,11 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  History
+                  Builders & Developers
                 </h5>
                 <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using
+                  Guiding students by giving the best options on the basis of budget, risk elements, facilities, labs
+                  etc.
                 </p>
               </div>
             </div>
@@ -148,12 +144,11 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Biography
+                  Admission
                 </h5>
                 <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using
+                  Processing the admission procedures on the
+                  basis of area, reference, campus etc.
                 </p>
               </div>
             </div>
@@ -165,12 +160,12 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Adventure
+                  Business
                 </h5>
                 <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using
+                  Assists students & parents for reporting to
+                  the college. (Includes stay, travel, guide & all
+                  the major facilities)
                 </p>
               </div>
             </div>
@@ -182,12 +177,14 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Fantasy
+                  Tourism
                 </h5>
                 <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using
+                  Travelling assistance with accommodation.
+                  Accompanying an Edwerse Executive with
+                  students& parents from home town to city of the college.
+                  Desired vehicle and room facilities for fresh up and stay
+
                 </p>
               </div>
             </div>
