--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Bostorek
+              Edwerse
             </span>
           </a>
 
@@ -55,9 +55,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="categories.html">Categories</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="blog.html"> Blog </a>
-              </li>
+              </li> -->
               <li class="nav-item active">
                 <a class="nav-link" href="contact.html">Contact Us <span class="sr-only">(current)</span> </a>
               </li>
