--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="categories.html">Categories</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link" href="blog.html"> Blog </a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
