--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <link rel="icon" href="images/Edwerse_Logo_3d_work.pdf-removebg-preview.png" type="image/gif" />
+  <link rel="icon" href="images/Edwerse Logo 3d work.pdf.png" type="image/gif" />
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
@@ -147,6 +147,9 @@
               </a>
               <a href="">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
+              </a>
+              <a href="">
+                <i class="fa fa-whatsapp" aria-hidden="true"></i>
               </a>
             </div>
           </div>
