--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Edwerse Consultancy </title>
+    <title>Guide4Career</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/Edwerse_Logo_3d_work.pdf-removebg-preview.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/g4c.png">
 
     <!-- CSS here -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -33,7 +33,7 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/Edwerse_Logo_3d_work.pdf-removebg-preview - Copy.png" alt="">
+                    <img src="assets/img/logo/g4c.png" alt="">
                 </div>
             </div>
         </div>
@@ -51,8 +51,8 @@
                                 <div class="header-info-left">
                                     <ul>
                                         <li><i class="fas fa-map-marker-alt"></i>Edappal Malappuram Kerala</li>
-                                        <li><i class="fas fa-envelope"></i>edwerseconsultancy@gmail.com</li>
-                                        <li><i class="fas fa-phone"></i>+91 96562 22637</li>
+                                        <li><i class="fas fa-envelope"></i>guide4career100@gmail.com</li>
+                                        <li><i class="fas fa-phone"></i>+91 6235 592 597</li>
                                     </ul>
                                 </div>
                                 <div class="header-info-right">
@@ -73,7 +73,7 @@
                             <!-- Logo -->
                             <div class="col-xl-2 col-lg-1 col-md-1">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo/edwerse3d.png" alt=""></a>
+                                    <a href="index.html"><img src="assets/img/logo/g4c_navbar.png" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-xl-8 col-lg-8 col-md-8">
@@ -82,8 +82,8 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a href="index.html">Home</a></li>
-                                            <li><a href="about.htm">About</a></li>
-                                            <li><a href="services.htm">Services</a></li>
+                                            <li><a href="about.html">About</a></li>
+                                            <li><a href="services.html">Services</a></li>
                                             <!-- <li><a href="cases.html">Cases</a></li> -->
                                             <!-- <li><a href="blog.html">Blog</a>
                                                 <ul class="submenu">
@@ -131,7 +131,8 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-6 col-md-8">
                                 <div class="hero__caption">
-                                    <p data-animation="fadeInLeft" data-delay=".4s">Welcome to Edwerse International</p>
+                                    <p data-animation="fadeInLeft" data-delay=".4s">Welcome to Guide4Career Education
+                                        Consultancy</p>
                                     <h1 data-animation="fadeInLeft" data-delay=".6s">We help you to grow your Career
                                     </h1>
                                     <!-- Hero-btn -->
@@ -149,7 +150,7 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-6 col-md-8">
                                 <div class="hero__caption">
-                                    <p data-animation="fadeInLeft" data-delay=".4s">Welcome to Edwerse International</p>
+                                    <p data-animation="fadeInLeft" data-delay=".4s">Welcome to Guide4Career education</p>
                                     <h1 data-animation="fadeInLeft" data-delay=".6s">We help you to grow your career
                                     </h1>
                                     <!-- Hero-btn -->
@@ -180,7 +181,7 @@
                                     <h4><a href="#">Our Mission</a></h4>
                                     <p>To be the premier provider in extending and enhancing students livelihood by
                                         providing high value added guidance in motivating them to invest hard work, time
-                                        and financial resources in shaping of their career.</p>
+                                        and financial resources in shaping of their career</p>
                                 </div>
                             </div>
                         </div>
@@ -192,11 +193,12 @@
                                 <div class="profile-img">
                                     <img src="assets/img/team/team_2.jpg" alt="">
                                 </div>
-                                <div class="profile-caption">
+                                <div class="profile-caption">   
                                     <h4><a href="#">Our Vission</a></h4>
-                                    <p> To provide the most appropriate higher education programs and up-to-date
+                                    <p>  To provide up-to-date
                                         information to Student society by making them aware of the various aspects of
-                                        educational institutes and courses in India.</p>
+                                        educational institutes and courses in India.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -206,7 +208,7 @@
                             <!-- Back -->
                             <div class="single-profile-back-last">
                                 <h2>What we do for you</h2>
-                                <p>EDWERSE INTERNATIONAL is the leading Educational consultancy offering services
+                                <p>Guide4Career is the leading Educational consultancy offering services
                                     all over India for Career Counseling and Admission guidance, acquiring
                                     acute expertise and excellence in the field of education.</p>
                                 <a href="#">View profile »</a>
@@ -346,7 +348,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-8">
                         <div class="single-cases-info mb-30">
                             <h3>Completed Cases</h3>
-                            <p>EDWERSE INTERNATIONAL takes zest in providing admission guidance in most of the reputed
+                            <p>Guide4Career takes zest in providing admission guidance in most of the reputed
                                 Institutions offering education in every sphere Medical, Engineering, management and
                                 many more We provide all around assistance for students to get admissions in various
                                 professional courses under management/NRI quota. We offer a unique range of services
@@ -525,10 +527,10 @@
                                     <div class="col-lg-8 col-md-8 mb-30">
                                         <div class="select-itms">
                                             <select name="select" id="select1">
-                                                <option value="">Services</option>
-                                                <option value="">Services-1</option>
-                                                <option value="">Services-2</option>
-                                                <option value="">Services-3</option>
+                                                <option value="">Education</option>
+                                                <option value="">Plus-1</option>
+                                                <option value="">Plus-2</option>
+                                                <option value="">Others</option>
                                             </select>
                                         </div>
                                     </div>
@@ -555,7 +557,9 @@
                             <div class="single-footer-caption mb-30">
                                 <!-- logo -->
                                 <div class="footer-logo">
-                                    <a href="index.html"><img src="assets/img/logo/Edwerse_Logo_3d_work.pdf-removebg-preview - Copy.png" alt=""></a>
+                                    <a href="index.html"><img
+                                            src="assets/img/logo/g4c_footer.png"
+                                            alt=""></a>
                                 </div>
                                 <div class="footer-tittle">
                                     <div class="footer-pera">
@@ -605,9 +609,9 @@
                             <div class="footer-tittle">
                                 <h4>Get in Touch</h4>
                                 <ul>
-                                    <li><a href="#">+91 96562 22637</a></li>
-                                    <li><a href="#"> edwerseconsultancy@gmail.com</a></li>
-                                    <li><a href="#">Edappal vlanceri</a></li>
+                                    <li><a href="#">+91 6235 592 597</a></li>
+                                    <li><a href="#">guide4career100@gmail.com</a></li>
+                                    <li><a href="#">Edappal</a></li>
                                 </ul>
                             </div>
                         </div>
