--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Consulting HTML-5 Template </title>
+        <title>About</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -35,7 +35,7 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/logo.png" alt="">
+                    <img src="assets/img/logo/Edwerse_Logo_3d_work.pdf-removebg-preview - Copy.png" alt="">
                 </div>
             </div>
         </div>
@@ -52,8 +52,9 @@
                             <div class="row d-flex justify-content-between align-items-center">
                                 <div class="header-info-left">
                                     <ul>     
-                                        <li><i class="fas fa-map-marker-alt"></i>65/A, 17th floor, Kings land, New York</li>
-                                        <li><i class="fas fa-envelope"></i>info@consulting.com</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Edappal Malappuram Kerala</li>
+                                        <li><i class="fas fa-envelope"></i>edwerseconsultancy@gmail.com</li>
+                                        <li><i class="fas fa-phone"></i>+91 96562 22637</li>
                                     </ul>
                                 </div>
                                 <div class="header-info-right">
@@ -74,7 +75,7 @@
                             <!-- Logo -->
                             <div class="col-xl-2 col-lg-1 col-md-1">
                                 <div class="logo">
-                                  <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                  <a href="index.html"><img src="assets/img/logo/edwerse3d.png" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-xl-8 col-lg-8 col-md-8">
@@ -85,17 +86,17 @@
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <li><a href="services.html">Services</a></li>
-                                            <li><a href="cases.html">Cases</a></li>
-                                            <li><a href="blog.html">Blog</a>
+                                            <!--<li><a href="cases.html">Cases</a></li>
+                                             <li><a href="blog.html">Blog</a>
                                                 <ul class="submenu">
                                                     <li><a href="blog.html">Blog</a></li>
                                                     <li><a href="single-blog.html">Blog Details</a></li>
                                                 </ul>
-                                            </li>
+                                            </li> -->
                                             <li><a href="#">Pages</a>
                                                 <ul class="submenu">
-                                                    <li><a href="contact.html">Contact</a></li>
-                                                    <li><a href="elements.html">Element</a></li>
+                                                    <li><a href="contact.htm">Contact</a></li>
+                                                    <li><a href="elements.htm">Element</a></li>
                                                 </ul>
                                             </li>
                                         </ul>
@@ -149,9 +150,11 @@
                     </div>
                     <div class="col-xl-5 col-lg-5">
                         <div class="trusted-caption">
-                           <h2>We are more trusted then 5000 clients</h2>
-                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostru  dolor sit amet, consectetur adipn.</p>
-                            <a href="#" class="btn trusted-btn">Learn More</a>
+                            <h2>We are more trusted then 5000 students</h2>
+                            <p> " We Guide You at the Right Way Of Opportunities. How to choose a career after PlusTwo.
+                                Guide to know your interests. Guide to choose the right course opt for you. Helps to
+                                know the future prospects. Go Beyond Your Dreams. Choose a career you love, and you will
+                                never have to work a day in your life "</p>
                         </div>
                     </div>
                 </div>
@@ -171,8 +174,10 @@
                                     <img src="assets/img/team/team_1.jpg" alt="">
                                 </div>
                                 <div class="profile-caption">
-                                    <h4><a href="#">Business Planning</a></h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore .</p>
+                                    <h4><a href="#">Our Vision</a></h4>
+                                    <p>To be the premier provider in extending and enhancing students livelihood by
+                                        providing high value added guidance in motivating them to invest hard work, time
+                                        and financial resources in shaping of their career.</p>
                                 </div>
                             </div>
                         </div>
@@ -185,8 +190,10 @@
                                     <img src="assets/img/team/team_2.jpg" alt="">
                                 </div>
                                 <div class="profile-caption">
-                                    <h4><a href="#">Financial Projections</a></h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore .</p>
+                                    <h4><a href="#">Our Mission</a></h4>
+                                    <p>To provide the most appropriate higher education programs and up-to-date
+                                        information to Student society by making them aware of the various aspects of
+                                        educational institutes and courses in India.</p>
                                 </div>
                             </div>
                         </div>
@@ -196,7 +203,9 @@
                             <!-- Back -->
                             <div class="single-profile-back-last">
                                 <h2>What we do for you</h2>
-                                <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore smod tem magna aliqua. Ut enim.</p>
+                                <p>EDWERSE INTERNATIONAL is the leading Educational consultancy offering services
+                                    all over India for Career Counseling and Admission guidance, acquiring
+                                    acute expertise and excellence in the field of education.</p>
                                 <a href="#">View profile »</a>
                             </div>
                         </div>
@@ -274,7 +283,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-tittle text-center">
-                            <h2>Our Recent News</h2>
+                            <h2>Best Universities</h2>
                         </div>
                     </div>
                 </div>
@@ -282,11 +291,11 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-recent-cap mb-30">
                             <div class="recent-img">
-                                <img src="assets/img/recent/rcent_1.png" alt="">
+                                <img src="assets/img/universities/bangalore.png" alt="">
                             </div>
                             <div class="recent-cap">
-                                <span>Business planing</span>
-                                <h4><a href="#">Amazing Places To Visit In Summer</a></h4>
+                                <span>Bangalore</span>
+                                <h4><a href="single-blog.htm">Amazing Places To Visit</a></h4>
                                 <p>Nov 30, 2020</p>
                             </div>
                         </div>
@@ -294,11 +303,11 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-recent-cap mb-30">
                             <div class="recent-img">
-                                <img src="assets/img/recent/rcent_2.png" alt="">
+                                <img src="assets/img/universities/canada.png" alt="">
                             </div>
                             <div class="recent-cap">
-                                <span>Audit</span>
-                                <h4><a href="single-blog.html">Amazing Places To Visit In Summer</a></h4>
+                                <span>Canada</span>
+                                <h4><a href="single-blog.htm">Amazing Places To Visit</a></h4>
                                 <p>Nov 30, 2020</p>
                             </div>
                         </div>
@@ -306,11 +315,11 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-recent-cap mb-30">
                             <div class="recent-img">
-                                <img src="assets/img/recent/rcent_3.png" alt="">
+                                <img src="assets/img/universities/uk.png" alt="">
                             </div>
                             <div class="recent-cap">
-                                <span>Business planing</span>
-                                <h4><a href="single-blog.html">Amazing Places To Visit In Summer</a></h4>
+                                <span>United Kigndom</span>
+                                <h4><a href="single-blog.htm">Amazing Places To Visit</a></h4>
                                 <p>Nov 30, 2020</p>
                             </div>
                         </div>
@@ -327,7 +336,7 @@
                     <div class="col-xl-4 col-lg-5 col-md-5">
                         <div class="request-content">
                             <h3>Request for  Call Back</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore,</p>
+                            <p>Talk with our Experts</p>
                         </div>
                     </div>
                     <div class="col-xl-7 col-lg-7 col-md-7">
@@ -371,89 +380,89 @@
    <footer>
        <!-- Footer Start-->
        <div class="footer-area footer-padding">
-           <div class="container">
-               <div class="row d-flex justify-content-between">
-                   <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-                      <div class="single-footer-caption mb-50">
+        <div class="container">
+            <div class="row d-flex justify-content-between">
+                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+                    <div class="single-footer-caption mb-50">
                         <div class="single-footer-caption mb-30">
-                             <!-- logo -->
+                            <!-- logo -->
                             <div class="footer-logo">
-                                <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                <a href="index.html"><img src="assets/img/logo/Edwerse_Logo_3d_work.pdf-removebg-preview - Copy.png" alt=""></a>
                             </div>
                             <div class="footer-tittle">
                                 <div class="footer-pera">
-                                    <p>Lorem ipsum dolor sit amet, adipiscing elit, sed do eiusmod</p>
-                               </div>
+                                    <!-- <p>Lorem ipsum dolor sit amet, adipiscing elit, sed do eiusmod</p> -->
+                                </div>
                             </div>
                             <!-- social -->
-                            <div class="footer-social">
+                            <div class="footer-social me-5">
                                 <a href="#"><i class="fab fa-facebook-square"></i></a>
                                 <a href="#"><i class="fab fa-twitter-square"></i></a>
                                 <a href="#"><i class="fab fa-linkedin"></i></a>
                                 <a href="#"><i class="fab fa-pinterest-square"></i></a>
                             </div>
                         </div>
-                      </div>
-                   </div>
-                   <div class="col-xl-2 col-lg-2 col-md-4 col-sm-5">
-                       <div class="single-footer-caption mb-50">
-                           <div class="footer-tittle">
-                               <h4>Company</h4>
-                               <ul>
-                                   <li><a href="index.html">Home</a></li>
-                                   <li><a href="about.html">About Us</a></li>
-                                   <li><a href="single-blog.html">Services</a></li>
-                                   <li><a href="#">Cases</a></li>
-                                   <li><a href="contact.html">  Contact Us</a></li>
-                               </ul>
-                           </div>
-                       </div>
-                   </div>
-                   <div class="col-xl-3 col-lg-3 col-md-4 col-sm-7">
-                       <div class="single-footer-caption mb-50">
-                           <div class="footer-tittle">
-                               <h4>Services</h4>
-                               <ul>
-                                   <li><a href="#">Commercial Cleaning</a></li>
-                                   <li><a href="#">Office Cleaning</a></li>
-                                   <li><a href="#">Building Cleaning</a></li>
-                                   <li><a href="#">Floor Cleaning</a></li>
-                                   <li><a href="#">Apartment Cleaning</a></li>
-                               </ul>
-                           </div>
-                       </div>
-                   </div>
-                   <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
-                       <div class="single-footer-caption mb-50">
-                           <div class="footer-tittle">
-                               <h4>Get in Touch</h4>
-                               <ul>
-                                <li><a href="#">152-515-6565</a></li>
-                                <li><a href="#"> Demomail@gmail.com</a></li>
-                                <li><a href="#">New Orleans, USA</a></li>
+                    </div>
+                </div>
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-5">
+                    <div class="single-footer-caption mb-50">
+                        <div class="footer-tittle">
+                            <h4>Company</h4>
+                            <ul>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.htm">About Us</a></li>
+                                <li><a href="single-blog.htm">Services</a></li>
+                                <li><a href="#">Cases</a></li>
+                                <li><a href="contact.htm"> Contact Us</a></li>
                             </ul>
-                           </div>
-                       </div>
-                   </div>
-               </div>
-           </div>
-       </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-7">
+                    <div class="single-footer-caption mb-50">
+                        <div class="footer-tittle">
+                            <h4>Services</h4>
+                            <ul>
+                                <li><a href="#">Education</a></li>
+                                <li><a href="#">Admission</a></li>
+                                <li><a href="#">Tourism</a></li>
+                                <li><a href="#">Loan Assistance</a></li>
+                                <li><a href="#">Placemnt</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
+                    <div class="single-footer-caption mb-50">
+                        <div class="footer-tittle">
+                            <h4>Get in Touch</h4>
+                            <ul>
+                                <li><a href="#">+91 96562 22637</a></li>
+                                <li><a href="#"> edwerseconsultancy@gmail.com</a></li>
+                                <li><a href="#">Edappal vlanceri</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
        <!-- footer-bottom aera -->
-       <div class="footer-bottom-area footer-bg">
+       <!-- <div class="footer-bottom-area footer-bg">
            <div class="container">
                <div class="footer-border">
                     <div class="row d-flex align-items-center">
                         <div class="col-xl-12 ">
                             <div class="footer-copy-right text-center">
-                                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                <p> Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+   Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </p>
                             </div>
                         </div>
                     </div>
                </div>
            </div>
-       </div>
+       </div> -->
        <!-- Footer End-->
    </footer>
    
